[gd_scene load_steps=14 format=3 uid="uid://ca1yci1jf0xm5"]

[ext_resource type="Texture2D" uid="uid://d15ctv0da3wfq" path="res://sprites/tiny_dungeon.png" id="1"]
[ext_resource type="Script" uid="uid://bhujew0qjug8c" path="res://Lighthouse/Dude.gd" id="2"]
[ext_resource type="FontFile" uid="uid://cb0pkynyal1e0" path="res://Lighthouse/Kenney Thick.ttf" id="3"]

[sub_resource type="Animation" id="9"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}

[sub_resource type="Animation" id="10"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="RectangleShape2D" id="8"]
size = Vector2(14, 14)

[sub_resource type="Animation" id="4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GreenRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 1, 0.0156863, 1)]
}

[sub_resource type="Animation" id="5"]
resource_name = "blink"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GreenRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.2, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 1, 0.0156863, 1), Color(0, 1, 0.0156863, 1), Color(0, 1, 0.0156863, 0.298039)]
}

[sub_resource type="Animation" id="6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RedRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 1)]
}

[sub_resource type="Animation" id="7"]
resource_name = "blink"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RedRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.2, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 0, 0, 1), Color(1, 0, 0, 0.294118)]
}

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("3")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("3")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="FontFile" id="3"]
fallbacks = Array[Font]([ExtResource("3")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[node name="Dude" type="StaticBody2D"]
input_pickable = true
script = ExtResource("2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../TinyDungeon")
autoplay = "idle"
anims/RESET = SubResource("9")
anims/idle = SubResource("10")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("8")

[node name="TinyDungeon" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("1")
region_enabled = true
region_rect = Rect2(17, 119, 16, 16)

[node name="Bubble" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
anchor_left = 0.5
anchor_right = 0.5
offset_left = -19.0
offset_top = -40.0
offset_right = 19.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
custom_minimum_size = Vector2(10, 10)
size_flags_horizontal = 13
size_flags_vertical = 13

[node name="VBoxContainer" type="VBoxContainer" parent="Bubble"]
offset_left = 7.0
offset_top = 7.0
offset_right = 87.0
offset_bottom = 162.0
grow_horizontal = 2
grow_vertical = 2

[node name="LightsContainer" type="HBoxContainer" parent="Bubble/VBoxContainer"]
offset_right = 80.0
offset_bottom = 15.0
alignment = 1

[node name="GreenRect" type="ColorRect" parent="Bubble/VBoxContainer/LightsContainer"]
unique_name_in_owner = true
offset_left = 23.0
offset_right = 38.0
offset_bottom = 15.0
custom_minimum_size = Vector2(15, 15)
color = Color(0, 1, 0.0156863, 0.298039)

[node name="RedRect" type="ColorRect" parent="Bubble/VBoxContainer/LightsContainer"]
unique_name_in_owner = true
offset_left = 42.0
offset_right = 57.0
offset_bottom = 15.0
custom_minimum_size = Vector2(15, 15)
color = Color(1, 0, 0, 0.294118)

[node name="GreenPlayer" type="AnimationPlayer" parent="Bubble/VBoxContainer/LightsContainer"]
unique_name_in_owner = true
reset_on_save = false
anims/RESET = SubResource("4")
anims/blink = SubResource("5")

[node name="RedPlayer" type="AnimationPlayer" parent="Bubble/VBoxContainer/LightsContainer"]
unique_name_in_owner = true
reset_on_save = false
anims/RESET = SubResource("6")
anims/blink = SubResource("7")

[node name="Label" type="Label" parent="Bubble/VBoxContainer"]
self_modulate = Color(0.988235, 0.647059, 0, 1)
offset_top = 19.0
offset_right = 80.0
offset_bottom = 28.0
theme_override_fonts/font = SubResource("1")
text = "Timer"

[node name="TimerLabel" type="Label" parent="Bubble/VBoxContainer"]
unique_name_in_owner = true
offset_top = 32.0
offset_right = 80.0
offset_bottom = 50.0
custom_minimum_size = Vector2(60, 0)
theme_override_fonts/font = SubResource("2")
text = "0.00"
align = 2

[node name="Label3" type="Label" parent="Bubble/VBoxContainer"]
self_modulate = Color(0.945098, 1, 0, 1)
offset_top = 54.0
offset_right = 80.0
offset_bottom = 63.0
theme_override_fonts/font = SubResource("1")
text = "Omnicourse"

[node name="OCContainer" type="HBoxContainer" parent="Bubble/VBoxContainer"]
offset_top = 67.0
offset_right = 80.0
offset_bottom = 85.0
theme_override_constants/separation = 0
alignment = 2

[node name="CourseLabel" type="Label" parent="Bubble/VBoxContainer/OCContainer"]
unique_name_in_owner = true
offset_left = 24.0
offset_right = 72.0
offset_bottom = 18.0
theme_override_fonts/font = SubResource("2")
text = "000"
align = 1

[node name="CourseLabel2" type="Label" parent="Bubble/VBoxContainer/OCContainer"]
unique_name_in_owner = true
offset_left = 72.0
offset_right = 80.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 1
theme_override_fonts/font = SubResource("3")
text = "o"
align = 1

[node name="Label5" type="Label" parent="Bubble/VBoxContainer"]
self_modulate = Color(0.431373, 1, 0, 1)
offset_top = 89.0
offset_right = 80.0
offset_bottom = 98.0
theme_override_fonts/font = SubResource("1")
text = "Azimuth"

[node name="AzContainer" type="HBoxContainer" parent="Bubble/VBoxContainer"]
offset_top = 102.0
offset_right = 80.0
offset_bottom = 120.0
theme_override_constants/separation = 0
alignment = 2

[node name="ALabel" type="Label" parent="Bubble/VBoxContainer/AzContainer"]
unique_name_in_owner = true
offset_left = 24.0
offset_right = 72.0
offset_bottom = 18.0
theme_override_fonts/font = SubResource("2")
text = "000"
align = 1

[node name="CourseLabel2" type="Label" parent="Bubble/VBoxContainer/AzContainer"]
offset_left = 72.0
offset_right = 80.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 1
theme_override_fonts/font = SubResource("3")
text = "o"
align = 1

[node name="Label4" type="Label" parent="Bubble/VBoxContainer"]
self_modulate = Color(1, 0, 0.470588, 1)
offset_top = 124.0
offset_right = 80.0
offset_bottom = 133.0
theme_override_fonts/font = SubResource("1")
text = "CE"

[node name="ErrorContainer" type="HBoxContainer" parent="Bubble/VBoxContainer"]
offset_top = 137.0
offset_right = 80.0
offset_bottom = 155.0
theme_override_constants/separation = 0
alignment = 2

[node name="ErrorLabel" type="Label" parent="Bubble/VBoxContainer/ErrorContainer"]
unique_name_in_owner = true
offset_left = 24.0
offset_right = 72.0
offset_bottom = 18.0
theme_override_fonts/font = SubResource("2")
text = "000"
align = 1

[node name="CourseLabel2" type="Label" parent="Bubble/VBoxContainer/ErrorContainer"]
offset_left = 72.0
offset_right = 80.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 1
theme_override_fonts/font = SubResource("3")
text = "o"
align = 1
